--- a/styles/index.css
+++ b/styles/index.css
@@ -15,7 +15,7 @@ html, body {
 
 #main {
   margin: 30px auto;
-  padding:15px;
+  padding: 15px;
   display: flex;
   flex-direction: column;
   border-radius: 5px;
@@ -23,15 +23,18 @@ html, body {
 }
 
 img{
+  display: block;
   max-width: 100%; 
   height: auto;
   margin: auto;
 }
 #img-div{
-  margin: -5px;
-  width: 100%;
+  margin: 10px;
   border: 5px solid #eee;
-  
+}
+
+#img-caption {
+  padding-top: 2px;
 }
 
 ul {
